--- a/app/src/main/res/layout/fragment_doc__truyen_.xml
+++ b/app/src/main/res/layout/fragment_doc__truyen_.xml
@@ -106,9 +106,8 @@
 
         <ListView
             android:id="@+id/lvDoctruyen"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="399dp"
+            android:layout_height="330dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
