--- a/app/src/main/res/layout/fragment_detail_truyen.xml
+++ b/app/src/main/res/layout/fragment_detail_truyen.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/border_02">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".DetailTruyenFragment">
 
     <ImageView
         android:id="@+id/imgAnh"
@@ -13,7 +13,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/truyen_example" />
@@ -59,4 +58,33 @@
         android:textSize="10dp"
         app:layout_constraintStart_toEndOf="@+id/imgAnh"
         app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />
+    <ImageView
+        android:id="@+id/imgYeuthich"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/heart"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTheloai"
+        app:layout_constraintLeft_toRightOf="@+id/imgAnh"
+        />
+    <TextView
+        android:id="@+id/tvTomtat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/sitka_banner"
+        app:layout_constraintTop_toBottomOf="@+id/imgAnh"
+        android:layout_marginTop="8dp"
+        android:text="Tóm tắt truyện"
+        android:textColor="@color/text_color"
+        android:textSize="10dp"
+        />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lvChuong"
+        app:layout_constraintTop_toBottomOf="@id/tvTomtat"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
