--- a/app/src/main/res/layout/fragment_lich_su.xml
+++ b/app/src/main/res/layout/fragment_lich_su.xml
@@ -7,7 +7,12 @@
     android:background="@color/bg_color"
     tools:context=".Doc_Truyen_Fragment"
     android:orientation="vertical">
-
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="ádasdasd"
+    android:textSize="30dp"
+    />
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
