--- a/app/src/main/res/layout/item_lich_su.xml
+++ b/app/src/main/res/layout/item_lich_su.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/border_02">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvTentruyen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
