--- a/app/src/main/res/layout/fragment_lich_su.xml
+++ b/app/src/main/res/layout/fragment_lich_su.xml
@@ -14,6 +14,7 @@
     android:textSize="30dp"
     />
     <ListView
+        android:id="@+id/lvList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
