--- a/app/src/main/res/layout/fragment_doc__truyen_.xml
+++ b/app/src/main/res/layout/fragment_doc__truyen_.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
-    tools:context=".Doc_Truyen_Fragment"
+    tools:context=".fragment.DanhSachTruyenFragment"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -100,19 +100,17 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="621dp">
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
         <ListView
             android:id="@+id/lvDoctruyen"
-            android:layout_width="399dp"
-            android:layout_height="330dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
