--- a/app/src/main/res/layout/fragment_lich_su.xml
+++ b/app/src/main/res/layout/fragment_lich_su.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg_color"
-    tools:context=".Doc_Truyen_Fragment"
+    tools:context=".fragment.DanhSachTruyenFragment"
     android:orientation="vertical">
 <TextView
     android:layout_width="wrap_content"
