--- a/app/src/main/res/layout/fragment_danh_sach_truyen.xml
+++ b/app/src/main/res/layout/fragment_danh_sach_truyen.xml
@@ -103,10 +103,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:layout_marginTop="8dp"
         android:layout_height="wrap_content">
 
-        <ListView
-            android:id="@+id/lvDoctruyen"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvDoctruyen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
