--- a/app/src/main/res/layout/fragment_doc_truyen.xml
+++ b/app/src/main/res/layout/fragment_doc_truyen.xml
@@ -16,19 +16,23 @@
     app:layout_constraintEnd_toEndOf="parent"
     android:layout_height="wrap_content"
     android:id="@+id/tvTenChuong"/>
-    <TextView
-        android:layout_margin="8dp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/tvNoidung"
+    <com.melnykov.fab.ObservableScrollView
         app:layout_constraintTop_toBottomOf="@id/tvTenChuong"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
+        android:id="@+id/scrollView"
+        app:layout_constraintBottom_toTopOf="@id/fabNext"
+        android:layout_height="0dp">
+    <TextView
+        android:layout_margin="8dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/tvNoidung"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:text="nd" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    </com.melnykov.fab.ObservableScrollView>
+    <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fabNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,5 +41,15 @@
         android:layout_marginBottom="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         android:src="@drawable/ic_baseline_arrow_forward_24" />
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fabPre"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/abc_vector_test" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
