--- a/app/src/main/res/layout/fragment_mo_ta_truyen.xml
+++ b/app/src/main/res/layout/fragment_mo_ta_truyen.xml
@@ -84,29 +84,37 @@
         android:id="@+id/imgYeuthich"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:src="@drawable/heart"
+        android:src="@drawable/ic_favorite_border"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvTheloai"
         app:layout_constraintLeft_toRightOf="@+id/imgAnh"
         />
+    <ScrollView
+        android:id="@+id/scrollTomtat"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/imgAnh"
+        >
     <TextView
         android:id="@+id/tvTomtat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/sitka_banner"
         app:layout_constraintTop_toBottomOf="@+id/imgAnh"
-        android:layout_marginTop="8dp"
+        android:layout_margin="8dp"
         android:text="Tóm tắt truyện"
         android:textColor="@color/text_color"
         android:textSize="10dp"
         />
+    </ScrollView>
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lvChuong"
-        app:layout_constraintTop_toBottomOf="@id/tvTomtat"
+        app:layout_constraintTop_toBottomOf="@id/scrollTomtat"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
