--- a/app/src/main/res/layout/item_truyen.xml
+++ b/app/src/main/res/layout/item_truyen.xml
@@ -1,62 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border_02">
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginBottom="4dp"
+    card_view:cardCornerRadius="8dp"
+    card_view:cardElevation="8dp">
 
-    <ImageView
-        android:id="@+id/imgAnh"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/truyen_example" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tvTentruyen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/sitka_banner"
-        android:text="NGẠO THẾ ĐAN THẦN"
-        android:textColor="@color/text_color"
-        android:textSize="15dp"
-        app:layout_constraintLeft_toRightOf="@+id/imgAnh"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/imgAnh"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:srcCompat="@drawable/truyen_example"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="8dp"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            />
+        <TextView
+            android:id="@+id/tvTentruyen"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toBottomOf="@+id/imgAnh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/sitka_banner"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:text="NGẠO THẾ ĐAN THẦN"
+            android:textColor="@color/text_color"
+            android:textSize="10dp" />
 
-    <TextView
-        android:id="@+id/tvTacgia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:capitalize="characters"
-        android:fontFamily="@font/sitka_banner"
-        android:text="Ngạo Thế Đan Thần"
-        android:textColor="@color/text_color"
-        android:textSize="10dp"
-        app:layout_constraintStart_toEndOf="@+id/imgAnh"
-        app:layout_constraintTop_toBottomOf="@+id/tvTentruyen" />
+        <!--    <TextView-->
+        <!--        android:id="@+id/tvTacgia"-->
+        <!--        android:layout_width="wrap_content"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginStart="8dp"-->
+        <!--        android:layout_marginTop="8dp"-->
+        <!--        android:capitalize="characters"-->
+        <!--        android:fontFamily="@font/sitka_banner"-->
+        <!--        android:text="Ngạo Thế Đan Thần"-->
+        <!--        android:textColor="@color/text_color"-->
+        <!--        android:textSize="10dp"-->
+        <!--        app:layout_constraintStart_toEndOf="@+id/imgAnh"-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/tvTentruyen" />-->
 
-    <TextView
-        android:id="@+id/tvTheloai"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:capitalize="characters"
-        android:fontFamily="@font/sitka_banner"
-        android:text="Ngạo Thế Đan Thần"
-        android:textColor="@color/text_color"
-        android:textSize="10dp"
-        app:layout_constraintStart_toEndOf="@+id/imgAnh"
-        app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!--    <TextView-->
+        <!--        android:id="@+id/tvTheloai"-->
+        <!--        android:layout_width="wrap_content"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:layout_marginStart="8dp"-->
+        <!--        android:layout_marginTop="8dp"-->
+        <!--        android:capitalize="characters"-->
+        <!--        android:fontFamily="@font/sitka_banner"-->
+        <!--        android:text="Ngạo Thế Đan Thần"-->
+        <!--        android:textColor="@color/text_color"-->
+        <!--        android:textSize="10dp"-->
+        <!--        app:layout_constraintStart_toEndOf="@+id/imgAnh"-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />-->
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
