--- a/app/src/main/res/layout/fragment_yeu_thich.xml
+++ b/app/src/main/res/layout/fragment_yeu_thich.xml
@@ -6,10 +6,14 @@
     tools:context=".fragment.YeuThichFragment">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ádasdasd"
-        android:textSize="30dp"
+        android:text="YÊU THÍCH"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_margin="8dp"
+        android:textSize="20dp"
         />
 
 </FrameLayout>
