--- a/app/src/main/res/layout/item_chuong.xml
+++ b/app/src/main/res/layout/item_chuong.xml
@@ -8,9 +8,9 @@
     android:layout_width="match_parent"
     android:layout_height="30dp"
     android:text="Chương 1"
-    android:textColor="#000000"
+    android:textColor="@color/text_color"
     android:id="@+id/tvChuong"
-    android:gravity="center"
-    android:background="#ffffff"
+    android:layout_margin="8dp"
+    android:textSize="12dp"
     tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
