--- a/app/src/main/res/layout/item_lich_su.xml
+++ b/app/src/main/res/layout/item_lich_su.xml
@@ -7,7 +7,7 @@
     android:background="@drawable/border_02">
 
     <TextView
-        android:id="@+id/tvTentruyen"
+        android:id="@+id/tvLichsu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
@@ -24,13 +24,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imgXoa"
         android:layout_width="26dp"
         android:layout_height="32dp"
         android:layout_marginEnd="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/trash" />
+        android:src="@drawable/ic_delete" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
