--- a/app/src/main/res/layout/fragment_mo_ta_truyen.xml
+++ b/app/src/main/res/layout/fragment_mo_ta_truyen.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:id="@+id/tvTentruyen"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -28,7 +28,8 @@
         android:text="NGẠO THẾ ĐAN THẦN"
         android:textColor="@color/text_color"
         android:textSize="20dp"
-        app:layout_constraintLeft_toRightOf="@+id/imgAnh"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imgAnh"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/tvTg"
@@ -91,24 +92,25 @@
         app:layout_constraintTop_toBottomOf="@id/tvTheloai"
         app:layout_constraintLeft_toRightOf="@+id/imgAnh"
         />
+
     <ScrollView
         android:id="@+id/scrollTomtat"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/imgAnh"
-        >
-    <TextView
-        android:id="@+id/tvTomtat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/sitka_banner"
-        app:layout_constraintTop_toBottomOf="@+id/imgAnh"
-        android:layout_margin="8dp"
-        android:text="Tóm tắt truyện"
-        android:textColor="@color/text_color"
-        android:textSize="10dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgAnh">
+
+        <TextView
+            android:id="@+id/tvTomtat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:fontFamily="@font/sitka_banner"
+            android:text="Tóm tắt truyện"
+            android:textColor="@color/text_color"
+            android:textSize="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/imgAnh" />
     </ScrollView>
     <ListView
         android:layout_width="match_parent"
