--- a/app/src/main/res/layout/fragment_doc_truyen.xml
+++ b/app/src/main/res/layout/fragment_doc_truyen.xml
@@ -5,51 +5,68 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.DocTruyenFragment">
-<TextView
-    android:layout_marginTop="10dp"
-    android:textStyle="bold"
-    android:textSize="30dp"
-    android:gravity="center"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_width="match_parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/tvTenChuong"/>
-    <com.melnykov.fab.ObservableScrollView
-        app:layout_constraintTop_toBottomOf="@id/tvTenChuong"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_width="match_parent"
-        android:id="@+id/scrollView"
-        app:layout_constraintBottom_toTopOf="@id/fabNext"
-        android:layout_height="0dp">
+
     <TextView
-        android:layout_margin="8dp"
+        android:id="@+id/tvTenChuong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:id="@+id/tvNoidung"
+        android:gravity="center"
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.melnykov.fab.ObservableScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:text="nd" />
+        app:layout_constraintBottom_toTopOf="@id/fabNext"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTenChuong">
+
+        <TextView
+            android:id="@+id/tvNoidung"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            android:layout_marginTop="10dp"
+            android:text="nd" />
     </com.melnykov.fab.ObservableScrollView>
+
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fabNext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_baseline_arrow_forward_24" />
+        android:src="@drawable/ic_baseline_arrow_forward_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/fabPre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/abc_vector_test" />
+        android:src="@drawable/abc_vector_test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="98dp"
+        android:layout_height="55dp"
+        android:background="@drawable/speaker"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fabNext"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/fabPre"
+        app:layout_constraintTop_toBottomOf="@+id/scrollView" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
