--- a/app/src/main/res/layout/fragment_yeu_thich.xml
+++ b/app/src/main/res/layout/fragment_yeu_thich.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.YeuThichFragment">
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="YÊU THÍCH"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
         android:layout_margin="8dp"
+        android:gravity="center"
+        android:text="YÊU THÍCH"
         android:textSize="20dp"
-        />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/rvYeuThich"
+        app:layout_constraintStart_toEndOf="@+id/rvYeuThich"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvYeuThich"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
