--- a/app/src/main/res/layout/fragment_mo_ta_truyen.xml
+++ b/app/src/main/res/layout/fragment_mo_ta_truyen.xml
@@ -1,122 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.MoTaTruyenFragment">
 
-    <ImageView
-        android:id="@+id/imgAnh"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/border_02"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/truyen_example" />
+        tools:ignore="MissingConstraints">
 
-    <TextView
-        android:id="@+id/tvTentruyen"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:fontFamily="@font/sitka_banner"
-        android:text="NGẠO THẾ ĐAN THẦN"
-        android:textColor="@color/text_color"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imgAnh"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/tvTg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/sitka_banner"
-        android:text="Tác giả: "
-        android:textColor="@color/text_color"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/imgAnh"
-        app:layout_constraintTop_toBottomOf="@+id/tvTentruyen" />
-    <TextView
-        android:id="@+id/tvTacgia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/sitka_banner"
-        android:text="Ngạo Thế Đan Thần"
-        android:textColor="@color/text_color"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/tvTg"
-        app:layout_constraintTop_toBottomOf="@+id/tvTentruyen" />
-    <TextView
-        android:id="@+id/tvTl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/sitka_banner"
-        android:text="Thể loại: "
-        android:textColor="@color/text_color"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/imgAnh"
-        app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />
-
-    <TextView
-        android:id="@+id/tvTheloai"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:capitalize="characters"
-        android:fontFamily="@font/sitka_banner"
-        android:text="Ngạo Thế Đan Thần"
-        android:textColor="@color/text_color"
-        android:textSize="15dp"
-        app:layout_constraintStart_toEndOf="@+id/tvTl"
-        app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />
-    <ImageView
-        android:id="@+id/imgYeuthich"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_favorite_border"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTheloai"
-        app:layout_constraintLeft_toRightOf="@+id/imgAnh"
-        />
-
-    <ScrollView
-        android:id="@+id/scrollTomtat"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgAnh">
+        <ImageView
+            android:id="@+id/imgAnh"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/truyen_example" />
 
         <TextView
-            android:id="@+id/tvTomtat"
-            android:layout_width="match_parent"
+            android:id="@+id/tvTentruyen"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:fontFamily="@font/sitka_banner"
-            android:text="Tóm tắt truyện"
+            android:text="NGẠO THẾ ĐAN THẦN"
             android:textColor="@color/text_color"
-            android:textSize="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/imgAnh" />
-    </ScrollView>
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgAnh"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tvTg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/sitka_banner"
+            android:text="Tác giả:"
+            android:textColor="@color/text_color"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/imgAnh"
+            app:layout_constraintTop_toBottomOf="@+id/tvTentruyen" />
+
+        <TextView
+            android:id="@+id/tvTacgia"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/sitka_banner"
+            android:text="Ngạo Thế Đan Thần"
+            android:textColor="@color/text_color"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/tvTg"
+            app:layout_constraintTop_toBottomOf="@+id/tvTentruyen" />
+
+        <TextView
+            android:id="@+id/tvTl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/sitka_banner"
+            android:text="Thể loại:"
+            android:textColor="@color/text_color"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/imgAnh"
+            app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />
+
+        <TextView
+            android:id="@+id/tvTheloai"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
+            android:capitalize="characters"
+            android:fontFamily="@font/sitka_banner"
+            android:text="Ngạo Thế Đan Thần"
+            android:textColor="@color/text_color"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/tvTl"
+            app:layout_constraintTop_toBottomOf="@+id/tvTacgia" />
+
+        <ImageView
+            android:id="@+id/imgYeuthich"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_favorite_border"
+            app:layout_constraintStart_toEndOf="@+id/imgAnh"
+            app:layout_constraintTop_toBottomOf="@id/tvTheloai" />
+
+        <ScrollView
+            android:id="@+id/scrollTomtat"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgAnh">
+
+            <TextView
+                android:id="@+id/tvTomtat"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:fontFamily="@font/sitka_banner"
+                android:text="Tóm tắt truyện"
+                android:textColor="@color/text_color"
+                android:textSize="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/imgAnh" />
+        </ScrollView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/lvChuong"
-        app:layout_constraintTop_toBottomOf="@id/scrollTomtat"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
