--- a/app/src/main/res/layout/item_truyen.xml
+++ b/app/src/main/res/layout/item_truyen.xml
@@ -15,15 +15,14 @@
 
         <ImageView
             android:id="@+id/imgAnh"
-            card_view:layout_constraintEnd_toEndOf="parent"
-            card_view:layout_constraintStart_toStartOf="parent"
-            card_view:layout_constraintTop_toTopOf="parent"
-            card_view:srcCompat="@drawable/truyen_example"
             android:layout_width="100dp"
             android:layout_height="150dp"
             android:layout_marginBottom="8dp"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            />
+            card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:srcCompat="@drawable/truyen_example" />
         <TextView
             android:id="@+id/tvTentruyen"
             card_view:layout_constraintEnd_toEndOf="parent"
