fix loi + sua giao dien + update db 1.1

--- a/app/src/main/res/layout/item_lich_su.xml
+++ b/app/src/main/res/layout/item_lich_su.xml
@@ -8,10 +8,11 @@
 
     <TextView
         android:id="@+id/tvLichsu"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="15dp"
         android:capitalize="characters"
         android:fontFamily="@font/sitka_banner"
@@ -20,17 +21,18 @@
         android:textColor="@color/text_color"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imgXoa"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imgXoa"
-        android:layout_width="26dp"
+        android:layout_width="0dp"
         android:layout_height="32dp"
         android:layout_marginEnd="15dp"
+        android:src="@drawable/ic_delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_delete" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
