--- a/app/src/main/res/layout/fragment_doc_truyen.xml
+++ b/app/src/main/res/layout/fragment_doc_truyen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_color"
     tools:context=".fragment.DocTruyenFragment">
 
     <TextView
@@ -33,8 +34,9 @@
             android:layout_height="0dp"
             android:layout_marginLeft="2dp"
             android:layout_marginTop="2dp"
+            android:layout_marginEnd="5dp"
             android:layout_marginRight="2dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginBottom="5dp"
             android:text="nd" />
     </com.melnykov.fab.ObservableScrollView>
 
