--- a/app/src/main/res/layout/fragment_mo_ta_truyen.xml
+++ b/app/src/main/res/layout/fragment_mo_ta_truyen.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_color"
     tools:context=".fragment.MoTaTruyenFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -11,9 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
-        android:layout_marginLeft="8dp"
         android:background="@drawable/border_02"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
