--- a/app/src/main/res/layout/fragment_yeu_thich.xml
+++ b/app/src/main/res/layout/fragment_yeu_thich.xml
@@ -22,7 +22,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvYeuThich"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
